complete mobile version

--- a/initio-landing/index.html
+++ b/initio-landing/index.html
@@ -33,9 +33,9 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section__title section__title--promo">
-						<span>Всесезонный</span>
+						<span class="bg-gradient">Всесезонный</span>
 						<br>
-						<span>Пилинг IO PRC</span>
+						<span class="bg-gradient">Пилинг IO PRC</span>
 					</div>
 					<div class="section__subtitle">pro recreation complex io prc</div>
 				</div>
@@ -51,7 +51,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section__title">
-						<span>Устраняет:</span>
+						<span class="bg-gradient">Устраняет:</span>
 					</div>
 
 					<div class="section__list">
@@ -77,9 +77,9 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section__title">
-						<span>Гарантированный</span>
+						<span class="bg-gradient">Гарантированный</span>
 						<br>
-						<span>результат:</span>
+						<span class="bg-gradient">результат:</span>
 					</div>
 
 					<div class="section__list">
@@ -100,23 +100,114 @@
 		</div>
 	</div>
 
-	<div class="section section--gray">
+	<div class="section section--gray catalog">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section__title">
-						<span>Профессиональные</span>
+						<span class="bg-gradient">Профессиональные</span>
 						<br>
-						<span>Продукты</span>
+						<span class="bg-gradient">Продукты</span>
 					</div>
 				</div>
+				
 				<div class="col-xs-12">
-					<img src="img/promo-photo.png" alt="promo-alt-text" class="promo__photo">
+					<div class="item">
+						<div class="item__photo">
+							<img src="img/item-1.png" alt="mousse" class="item__img item--mousse">
+						</div>
+						<div class="item__caption">Очищающая пенка-мусс Pro-Active Cleansing Foam IO PRF</div>
+					</div>
+				</div>
+
+				<div class="col-xs-12">
+					<div class="item">
+						<div class="item__photo">
+							<img src="img/item-2.png" alt="peeling" class="item__img item--peeling">
+						</div>
+						<div class="item__caption">Всесезонный пилинг Pro-Recreation Complex IO PRC</div>
+					</div>	
+				</div>
+
+				<div class="col-xs-12">
+					<div class="item">
+						<div class="item__photo">
+							<img src="img/item-3.png" alt="oxygen mask" class="item__img item--mask">
+						</div>
+						<div class="item__caption">Кислородная маска с перфтордекалином и гиалуроновой кислотой Pro-Oxygen Mask Optimizer IO PRM</div>
+					</div>	
 				</div>
 			</div>
 		</div>
 	</div>
 
+	<div class="section section--gray section--consult">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<form action="#" class="consult" method="POST">
+						<div class="section__title">
+							<span>Получите </span>
+							<br>
+							<span>консультацию </span>
+							<br>
+							<span>о продукте</span>
+						</div>
+
+						<div class="form-field">
+							<span class="consult__input-label">Фамилия</span>
+							<input type="text" class="consult__input" placeholder="Фамилия" name="lastName">
+						</div>
+
+						<div class="form-field">
+							<span class="consult__input-label">Имя</span>
+							<input type="text" class="consult__input" placeholder="Имя" name="name">
+						</div>
+
+						<div class="form-field">
+							<span class="consult__input-label">Город</span>
+							<input type="text" class="consult__input" placeholder="Город" name="city">
+						</div>
+
+						<div class="form-field">
+							<span class="consult__input-label">Номер телефона</span>
+							<input type="text" class="consult__input" placeholder="+7 921 234 56 78" name="phone">
+						</div>
+
+						<div class="form-field">
+							<span class="consult__input-label">Ваше сообщение</span>
+							<input type="text" class="consult__input" placeholder="Ваше сообщение" name="msg">
+						</div>
+
+						<input type="submit" class="btn bg-gradient btn-consult">
+
+						<div class="form-field">
+							<input type="checkbox" name="agree" class="hidden-checkbox">
+
+							<div class="agreement">
+								<img src="img/checkbox-active.png" alt="" class="agreement__checkbox" id="js-agreement">
+								<div class="agreement__text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных.</div>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<footer class="section section--footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<a href="/" class="logo"></a>
+					<div class="to-top" id="js-toTop">
+						<img src="img/to-top.png">
+						<span>Наверх</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<style>
 		.header {
@@ -135,9 +226,8 @@
 			margin-bottom: 20px;
 		}
 		.btn {
-			padding: 20px 0;
+			padding: 15px 0;
 			border-radius: 14px;
-			color: #000000;
 			font-family: "Montserrat-SemiBold";
 			font-size: 12px;
 			font-weight: 400;
@@ -145,6 +235,8 @@
 			text-transform: uppercase;
 			cursor: pointer;
 			transition: 0.3s linear;
+			border: none;
+			outline: none;
 		}
 		.btn--gray {
 			background-color: #e0e8ea;
@@ -189,20 +281,22 @@
 			text-transform: uppercase;
 			margin-bottom: 20px;
 		}
+		.section__title span {
+			display: inline-block;
+			padding: 0 10px;
+			margin-bottom: 3px;
+			text-transform: uppercase;
+		}
 		.section__title--promo {
 			font-size: 28px;
 			text-align: center;
 		}
-		.section__title span {
-			display: inline-block;
-			padding: 0 10px;
+		.bg-gradient {			
 			background: #FFF2C7;
 			background: -webkit-linear-gradient(right, #FFF2C7, #DFBC94);
 			background: -o-linear-gradient(right, #FFF2C7, #DFBC94);
 			background: linear-gradient(to left, #FFF2C7, #DFBC94);
 			/*box-shadow: 0px 0 0 rgba(223, 188, 144, 1), 0px 0 0 rgba(255, 242, 199, 1);*/
-			margin-bottom: 3px;
-			text-transform: uppercase;
 		}
 		.section__title--promo {
 			width: 100%;
@@ -243,7 +337,7 @@
 			height: auto;
 			max-width: 100%;
 		}
-		
+
 		.section__list ul {
 			text-transform: uppercase;
 			padding-left: 20px;
@@ -252,12 +346,158 @@
 			/*list-style-type: none*/
 		}
 		.section__list li {
-			
+
 			font-size: 14px;
 			line-height: 1.2;
 			margin-bottom: 15px;
 		}
+		.catalog {
+			padding-bottom: 50px;
+		}
+		.catalog .section__title {
+			margin-bottom: 0;
+		}
+		.item {
+			text-align: center;
+		}
+		.item__photo {
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			position: relative;
+			width: 180px;
+			height: 180px;
+			background-color: #fff;
+			border-radius: 50%;
+			margin: 0 auto;
+			text-align: center;
+			margin-bottom: 15px;
+			margin-top: 50px;
+		}
+		.item__img {
+			width: auto;
+			height: 100%;
+			position: relative;
+			/*top: -15px;*/
+		}
+		.item--mousse {
+			top: -20px;
+			max-height: 205px;
+		}
+		.item--peeling {
+			max-height: 155px;
+		}
+		.item--mask {
+			max-height: 155px;
+		}
+		.item__caption {
+			position: relative;
+			max-width: 185px;
+			display: inline-block;
+			margin: 0 auto;
+			text-align: center;
+			font-family: "Montserrat-SemiBold";
+			font-size: 14px;
+			line-height: 1.2;
+		}
+
+		.section--consult {
+			padding: 0 10px;
+		}
+		.consult {
+			padding: 35px 20px 25px;
+			margin-bottom: 30px;
+			background: #fff;
+		}
+		.agreement {
+			margin: 0 auto;
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+			justify-content: center;
+			align-items: flex-start;
+		}
+		.hidden-checkbox {
+			position: relative;
+			left: -9999px;
+		}
+		.agreement__text {
+			/*max-width: 200px;*/
+			margin-left: 10px;
+			color: #949494;
+			font-size: 10px;
+			line-height: 1.2;
+		}
+		.form-field {
+			padding: 0 10px;
+			margin-bottom: 25px;
+		}
+		.consult__input-label {
+			font-family: 'Montserrat-SemiBold';
+			font-size: 14px;
+		}
+		.consult__input {
+			display: block;
+			width: 100%;
+			border: none;
+			font-size: 16px;
+			border-bottom: 1px solid #cfcfcf;
+			line-height: 2;
+			outline: none;
+		}
+		.btn-consult {
+			position: relative;
+			display: inline-block;
+			padding: 15px 25px;
+			transform: translateX(-50%);
+			margin-left: 50%;
+			margin-top: 40px;
+			margin-bottom: 50px;
+			transition: 0.3s linear;
+		}
+		.btn-consult:hover {
+			background: #FFE7C8;
+			background: -webkit-linear-gradient(right, #FFE7C8, #E0B396);
+			background: -o-linear-gradient(right, #FFE7C8, #E0B396);
+			background: linear-gradient(to left, #FFE7C8, #E0B396);
+		}
+
+
+		.section--footer {
+			padding: 20px 30px 60px;
+		}
+		.section--footer .logo {
+			margin-bottom: 20px;
+		}
+		.to-top {
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: -o-flex;
+			display: flex;
+
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+
+			cursor: pointer;
+		}
+		.to-top img {
+			display: inline-block;
+			margin-bottom: 10px;
+		}
+		.to-top span {
+			text-transform: uppercase;
+			font-family: 'Montserrat-Bold';
+			font-size: 14px;
+		}
 	</style>
-	
+
 </body>
 </html>
