added js functions

--- a/initio-landing/index.html
+++ b/initio-landing/index.html
@@ -167,7 +167,7 @@
 
 								<div class="form-field">
 									<span class="consult__input-label">Номер телефона</span>
-									<input type="text" class="consult__input" placeholder="+7 921 234 56 78" name="phone">
+									<input id="user_phone" type="text" class="consult__input" placeholder="+7 921 234 56 78" name="phone">
 								</div>
 
 								<div class="form-field">
@@ -207,6 +207,7 @@
 		</div>
 	</footer>
 <script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/maskedinput.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
