fix root link to my github pages

--- a/initio-landing/index.html
+++ b/initio-landing/index.html
@@ -18,7 +18,7 @@
 							<div class="btn btn--gray">Консультация</div>
 						</div>
 
-						<a href="/" class="logo"></a>
+						<a href="https://llao87.github.io/initio-landing/" class="logo"></a>
 					</div>
 				</div>
 			</div>
@@ -197,7 +197,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<a href="/" class="logo"></a>
+					<a href="https://llao87.github.io/initio-landing/" class="logo"></a>
 					<div class="to-top" id="js-toTop">
 						<img src="img/to-top.png">
 						<span>Наверх</span>
