added scrolling by headers get consult button

--- a/initio-landing/index.html
+++ b/initio-landing/index.html
@@ -15,7 +15,7 @@
 					<div class="header__inner">
 						<div class="header__buttons">
 							<div class="btn btn--gray">Позвонить</div>
-							<div class="btn btn--gray">Консультация</div>
+							<div class="btn btn--gray" id="js-toConsult">Консультация</div>
 						</div>
 
 						<a href="https://llao87.github.io/initio-landing/" class="logo"></a>
@@ -137,7 +137,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<form action="#" class="consult" method="POST">
+					<form action="#" class="consult" id="form-consult" method="POST">
 						<div class="row">
 							<div class="col-xs-12 col-md-6 col-lg-6">
 								<div class="section__title">
