--- a/initio-landing/index.html
+++ b/initio-landing/index.html
@@ -149,6 +149,8 @@
 								</div>
 							</div>
 
+							<input type="hidden" name="form" value="consult">
+
 							<div class="col-xs-12 col-md-6 col-lg-6">
 								<div class="fields">
 									<div class="form-field">
@@ -168,7 +170,7 @@
 
 									<div class="form-field">
 										<span class="consult__input-label">Номер телефона</span>
-										<input id="user_phone" type="text" class="consult__input user_phone" placeholder="+7 921 234 56 78" name="phone">
+										<input id="user_phone" type="text" class="consult__input user_phone" placeholder="+7 (xxx) xxx xx xx" name="phone">
 									</div>
 
 									<div class="form-field">
@@ -217,7 +219,7 @@
 		<div class="fields">
 			<div class="form-field">
 				<span class="consult__input-label">Телефон</span>
-				<input type="text" id="user_phone_callback" class="consult__input" placeholder="+7 921 234 56 78" name="phone">
+				<input type="text" id="user_phone_callback" class="consult__input" placeholder="+7 (xxx) xxx xx xx" name="callback_phone">
 			</div>
 			<input type="submit" class="btn bg-gradient btn-submit">
 			<div id="js-callback-close" class="callback-close">✖</div>
